--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet prefetch" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+
 </head>
 <body>
 
@@ -32,23 +34,7 @@
 
         <ul class="deck"></ul>
     </div>
-    <!--  GameOver-->
-    <div class="modal">
-            <div class="modal-content">
-                <div class="modal-heading">
-                    <h1>You Win!</h1>
-                </div>
-                <div class="modal-stats">
-                    <p>Time: <span class="modal-time"></span></p>
-                    <p>Stars: <span class="modal-stars"></span></p>
-                    <p>Moves: <span class="modal-moves"></span></p>
-                </div>
-                <div class="modal-buttons">
-                    <button class="modal-button modal-newGame">New Game</button>
-                    <button class="modal-button modal-close">Close</button>
-                </div>
-            </div>
-        </div>
+    
     
     <script src="js/app.js"></script>
 </body>
