--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
     <link rel="stylesheet" href="css/app.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+      <script src="sweetalert2/dist/sweetalert2.all.min.js"></script>
+<!-- You can also include the stylesheet separately if desired: -->
 
 </head>
 <body>
